# MOAAP

./: LICENSE  README.md
MOAAP-Chp1-r3/app/: build.gradle  proguard-rules.pro
MOAAP-Chp1-r3/app/src/main/: AndroidManifest.xml
MOAAP-Chp1-r3/app/src/main/res/layout/: activity_home.xml  activity_main.xml
MOAAP-Chp1-r3/app/src/main/res/menu/: menu_main.xml
MOAAP-Chp1-r3/gradle/wrapper/: gradle-wrapper.properties
MOAAP-Chp1-r3/openCVLibrary320/: build.gradle
MOAAP-Chp2-r3/app/: build.gradle
MOAAP-Chp2-r3/app/src/main/: AndroidManifest.xml
MOAAP-Chp2-r3/gradle/wrapper/: gradle-wrapper.properties
MOAAP-Chp3-r3/: import-summary.txt
MOAAP-Chp3-r3/app/: CMakeLists.txt  build.gradle
MOAAP-Chp3-r3/app/src/androidTest/java/net/johnhany/moaap_chp3_r3/: ExampleInstrumentedTest.java
MOAAP-Chp3-r3/app/src/main/: AndroidManifest.xml
MOAAP-Chp3-r3/app/src/main/cpp/: precomp.hpp
MOAAP-Chp3-r3/app/src/main/java/net/johnhany/moaap_chp3_r3/: HomeActivity.java  MainActivity.java
MOAAP-Chp3-r3/app/src/main/res/layout/: activity_home.xml  activity_main.xml
MOAAP-Chp3-r3/app/src/main/res/menu/: menu_main.xml
MOAAP-Chp3-r3/app/src/main/res/values/: strings.xml
MOAAP-Chp3-r3/app/src/test/java/net/johnhany/moaap_chp3_r3/: ExampleUnitTest.java
MOAAP-Chp3-r3/gradle/wrapper/: gradle-wrapper.properties
MOAAP-Chp4-r3/app/: build.gradle
MOAAP-Chp4-r3/app/src/main/: AndroidManifest.xml
MOAAP-Chp4-r3/app/src/main/res/values/: styles.xml  (+1 more)
MOAAP-Chp4-r3/gradle/wrapper/: gradle-wrapper.properties
MOAAP-Chp4-r3/openCVLibrary320/: build.gradle
MOAAP-Chp5-r3/app/: build.gradle
MOAAP-Chp5-r3/app/src/main/: AndroidManifest.xml
MOAAP-Chp5-r3/gradle/wrapper/: gradle-wrapper.properties
MOAAP-Chp6-r3/app/: CMakeLists.txt  build.gradle
MOAAP-Chp6-r3/app/src/androidTest/java/net/johnhany/moaap_chp6_r3/: ExampleInstrumentedTest.java
MOAAP-Chp6-r3/app/src/main/: AndroidManifest.xml
MOAAP-Chp6-r3/app/src/main/cpp/: stitcher.cpp
MOAAP-Chp6-r3/app/src/main/java/net/johnhany/moaap_chp6_r3/: MainActivity.java
MOAAP-Chp6-r3/app/src/main/res/layout/: activity_main.xml
MOAAP-Chp6-r3/app/src/main/res/menu/: menu_main.xml
MOAAP-Chp6-r3/app/src/main/res/values/: strings.xml
MOAAP-Chp6-r3/app/src/test/java/net/johnhany/moaap_chp6_r3/: ExampleUnitTest.java
MOAAP-Chp6-r3/gradle/wrapper/: gradle-wrapper.properties
MOAAP-Chp7-r3/app/: build.gradle
MOAAP-Chp7-r3/app/src/main/: AndroidManifest.xml
MOAAP-Chp7-r3/gradle/wrapper/: gradle-wrapper.properties
MOAAP-Chp7-r3/openCVLibrary320/: build.gradle
(+34 files in other folders)
